<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.text.InputType"/>
        <import type="android.view.View"/>
        <variable name="viewmodel" type="com.example.todo.ui.list.event.EventViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
            android:id="@+id/ed_event_title"
            android:maxLines="1"
            android:gravity="start"
            android:textSize="18sp"
            android:textColor="#000000"
            android:hint="(标题，必填)"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:focusable="true"
            android:layout_height="50dp"
            android:inputType="@{viewmodel.detail ?  InputType.TYPE_CLASS_TEXT:InputType.TYPE_NULL}"
           />

    <TextView
            android:id="@+id/tv_event_content"
            android:layout_marginTop="15dp"
            android:text="@string/content"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/ed_event_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/ed_event_content"
            android:maxLines="10"
            android:gravity="start"
            android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/tv_event_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:inputType="@{viewmodel.detail ?  InputType.TYPE_CLASS_TEXT:InputType.TYPE_NULL}"
            android:layout_height="260dp"/>
    <TextView
            android:id="@+id/tv_event_type"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/ed_event_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/type"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tv_event_type_life"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/life"
            android:background="@{viewmodel.life ? @drawable/tag_choice : @drawable/tag_life}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_event_type_work"
            android:layout_width="90dp"
            android:clickable="@{viewmodel.detail ? true : false}"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_height="30dp"/>
    <TextView
            android:id="@+id/tv_event_type_work"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/work"
            android:background="@{viewmodel.work ? @drawable/tag_choice : @drawable/tag_work}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_type"
            app:layout_constraintEnd_toStartOf="@id/tv_event_type_learn"
            app:layout_constraintStart_toEndOf="@id/tv_event_type_life"
            android:layout_width="90dp"
            android:clickable="@{viewmodel.detail ? true : false}"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_height="30dp"/>
    <TextView
            android:id="@+id/tv_event_type_learn"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/learn"
            android:background="@{viewmodel.learn ? @drawable/tag_choice : @drawable/tag_learn}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_type"
            app:layout_constraintEnd_toStartOf="@id/tv_event_type_other"
            app:layout_constraintStart_toEndOf="@id/tv_event_type_work"
            android:layout_width="90dp"
            android:clickable="@{viewmodel.detail ? true : false}"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_height="30dp"/>
    <TextView
            android:id="@+id/tv_event_type_other"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/other"
            android:background="@{viewmodel.other ? @drawable/tag_choice : @drawable/tag_other}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_event_type_learn"
            android:layout_width="90dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:clickable="@{viewmodel.detail ? true : false}"
            android:layout_height="30dp"/>
    <Button
            android:id="@+id/bt_commit"
            android:layout_marginTop="25dp"
            android:text="@string/commit"
            android:background="@drawable/border"
            android:textSize="20sp"
            android:visibility="@{viewmodel.detail ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_type_learn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="150dp"
            android:layout_height="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>