<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.login.LoginActivity">
    <data>
        <import type="android.view.View" />
        <variable name="loginViewModel" type="com.example.todo.ui.login.LoginViewModel"/>
    </data>
    <LinearLayout
            android:background="@drawable/login_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:maxLines="1"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="@string/login_text"
                android:textSize="100sp"
                android:textColor="#ffffff"
                android:typeface="serif"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/login_username"
                    android:hint="@{loginViewModel.isUsernameFocus()==1 ? @string/null_value : @string/username}"
                    android:textColorHint="#000000"
                    android:textSize="22sp"
                    android:cursorVisible="@{loginViewModel.isUsernameFocus()==1?true:false}"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:paddingStart="5dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:layout_width="275dp"
                    android:layout_height="60dp"/>
            <ImageView
                    android:id="@+id/username_clear_button"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="@{(loginViewModel.isUsernameNotNull()+loginViewModel.isUsernameFocus())==2 ? View.VISIBLE : View.INVISIBLE}"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/border"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/login_password"
                    android:hint="@{loginViewModel.isPasswordFocus()==1 ? @string/null_value : @string/password}"
                    android:paddingStart="5dp"
                    android:textSize="22sp"
                    android:textCursorDrawable="@drawable/edit_cursor_color"
                    android:textColorHint="#000000"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_width="275dp"
                    android:layout_height="60dp"/>

            <ImageView
                    android:id="@+id/password_clear_button"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_clear_black_24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="@{(loginViewModel.isPasswordNotNull()+loginViewModel.isPasswordFocus())==2 ? View.VISIBLE : View.INVISIBLE}"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
        </LinearLayout>

        <Button
                android:id="@+id/login_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_border"
                android:layout_width="160dp"
                android:layout_height="50dp"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/login_to_register"
                android:text="@string/register"
                android:textStyle="italic"
                android:typeface="serif"
                android:textColor="#3F51B5"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>